--- a/react/package.json
+++ b/react/package.json
@@ -18,6 +18,13 @@
     "typescript": "^4.7.4",
     "web-vitals": "^2.1.4"
   },
+  "devDependencies": {
+    "@types/react": "^18.0.9",
+    "@types/react-dom": "^18.0.0",
+    "@vitejs/plugin-react": "^1.3.2",
+    "typescript": "^4.6.3",
+    "vite": "^2.9.5"
+  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
