--- a/react/package.json
+++ b/react/package.json
@@ -1,22 +1,20 @@
 {
-  "name": "my-app",
-  "version": "0.1.0",
+  "name": "react",
   "private": true,
+  "version": "0.0.0",
+  "scripts": {
+    "dev": "vite",
+    "build": "npm run build:client && npm run build:server",
+    "build:client": "tsc && vite build --outDir dist/client",
+    "build:server": "tsc && vite build --ssr src/main-server.tsx --outDir dist/server",
+    "preview": "vite preview"
+  },
   "dependencies": {
-    "@testing-library/jest-dom": "^5.16.4",
-    "@testing-library/react": "^13.3.0",
-    "@testing-library/user-event": "^13.5.0",
-    "@types/jest": "^27.5.2",
-    "@types/node": "^16.11.41",
-    "@types/react": "^18.0.14",
-    "@types/react-dom": "^18.0.5",
+    "@types/express": "^4.17.13",
     "express": "^4.18.1",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1",
-    "serve-static": "^1.15.0",
-    "typescript": "^4.7.4",
-    "web-vitals": "^2.1.4"
+    "react": "^18.0.0",
+    "react-dom": "^18.1.0",
+    "serve-static": "^1.15.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.9",
@@ -24,29 +22,5 @@
     "@vitejs/plugin-react": "^1.3.2",
     "typescript": "^4.6.3",
     "vite": "^2.9.5"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
   }
 }
